tests/query_errors/pp_embed_unrecognized_token2/error.txt
Error: 
    1 | define script snot
    2 | script
    3 |   use foo :: ";
      |              ^^ It looks like you forgot to terminate a string with a closing '"'
    4 | end;
    5 |
